fixed stretching of video

--- a/css/mdn.css
+++ b/css/mdn.css
@@ -37,8 +37,9 @@ video {
 	position: absolute;
     top: 0; left: 0; right: 0;
     margin: auto;
-/*	object-fit: cover;*/
-/*	width: 100%;*/
+	object-fit: contain;
+	width: 100%;
+/*    width: 100%;*/
 	height: 100%;
 	z-index: 1;
 /*	filter: invert(1);*/
